// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intl-phone-input renders without problems 1`] = `
<ForwardRef(ThemedComponent(Input))
  className="intl-phone-input"
  focused={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mobileTitle="Выберите:"
      mode="radio"
      nativeOptionPlaceholder="Выберите:"
      onBlur={[Function]}
      onButtonBlur={[Function]}
      onButtonFocus={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      popupSecondaryOffset={-24}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="m"
      value={
        Array [
          "ru",
        ]
      }
      view="default"
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="m"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = l 1`] = `
<ForwardRef(ThemedComponent(Input))
  className="intl-phone-input"
  focused={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mobileTitle="Выберите:"
      mode="radio"
      nativeOptionPlaceholder="Выберите:"
      onBlur={[Function]}
      onButtonBlur={[Function]}
      onButtonFocus={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      popupSecondaryOffset={-27}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="l"
      value={
        Array [
          "ru",
        ]
      }
      view="default"
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="l"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = m 1`] = `
<ForwardRef(ThemedComponent(Input))
  className="intl-phone-input"
  focused={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mobileTitle="Выберите:"
      mode="radio"
      nativeOptionPlaceholder="Выберите:"
      onBlur={[Function]}
      onButtonBlur={[Function]}
      onButtonFocus={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      popupSecondaryOffset={-24}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="m"
      value={
        Array [
          "ru",
        ]
      }
      view="default"
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="m"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = s 1`] = `
<ForwardRef(ThemedComponent(Input))
  className="intl-phone-input"
  focused={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mobileTitle="Выберите:"
      mode="radio"
      nativeOptionPlaceholder="Выберите:"
      onBlur={[Function]}
      onButtonBlur={[Function]}
      onButtonFocus={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      popupSecondaryOffset={-18}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="s"
      value={
        Array [
          "ru",
        ]
      }
      view="default"
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="s"
  type="tel"
  value="+7"
/>
`;

exports[`intl-phone-input renders without problems in all sizes: size = xl 1`] = `
<ForwardRef(ThemedComponent(Input))
  className="intl-phone-input"
  focused={false}
  leftAddons={
    <Select
      className="intl-phone-input__select"
      directions={
        Array [
          "bottom-left",
          "bottom-right",
          "top-left",
          "top-right",
        ]
      }
      disabled={false}
      equalPopupWidth={false}
      groupView="default"
      mobileMenuMode="native"
      mobileTitle="Выберите:"
      mode="radio"
      nativeOptionPlaceholder="Выберите:"
      onBlur={[Function]}
      onButtonBlur={[Function]}
      onButtonFocus={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      options={Array []}
      popupSecondaryOffset={-28}
      renderButtonContent={[Function]}
      renderPopupOnFocus={false}
      size="xl"
      value={
        Array [
          "ru",
        ]
      }
      view="default"
      width="default"
    />
  }
  noValidate={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  size="xl"
  type="tel"
  value="+7"
/>
`;
